--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -56,34 +56,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "Congratulations! Both the word/phrase seems to be an Anagram as per this program logic.\n"
+     ]
+    }
+   ],
    "source": [
-    "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
-    "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
+    "# Function to determine whether the 2 words or phrases are anagram or not, and return True or False boolean value accordingly\n",
+    "def anagram_checker(first_word, second_word):\n",
+    "  \"\"\"Checks for Anagram and returns True or False\"\"\"\n",
     "\n",
-    "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Slient\", \"listen\")"
+    "  # Verifying whether valid string has been entered or not\n",
+    "  # print (is_valid_string(first_word))\n",
+    "  # print (is_valid_string(second_word))\n",
+    "  if not (is_valid_string(first_word) and is_valid_string(second_word)):\n",
+    "    # print(\"Not a valid string\")\n",
+    "    return False\n",
+    "  \n",
+    "  # converting both inputted words into lowercase and removing spaces\n",
+    "  lower_first_word = first_word.lower().replace(' ','')\n",
+    "  lower_second_word = second_word.lower().replace(' ','')\n",
+    "  # print(lower_first_word, lower_second_word)\n",
+    "  # check if both words/phrase are of same length or not\n",
+    "  if(len(lower_first_word) == len(lower_second_word)):\n",
+    "      # sort the strings\n",
+    "      sorted_first_word = sorted(lower_first_word)\n",
+    "      sorted_second_word = sorted(lower_second_word)\n",
+    "      # print(sorted_first_word, sorted_second_word)\n",
+    "      # if sorted strings are the same\n",
+    "      if(sorted_first_word == sorted_second_word):\n",
+    "          return True\n",
+    "          # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\"\n",
+    "          # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\")\n",
+    "      else:\n",
+    "          return False\n",
+    "          # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
+    "          # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
+    "  else:\n",
+    "      return False\n",
+    "      # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
+    "      # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
+    "\n",
+    "# Function to verify whether valid string has been entered or not\n",
+    "def is_valid_string(input_word):\n",
+    "    \"\"\"Checks valid string\"\"\"\n",
+    "    no_space_string = input_word.replace(' ','')\n",
+    "    if input_word.isalpha() or no_space_string.isalpha():\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Check whether Anagram or not, and output the result to the user\n",
+    "if (anagram_checker(\"Fourth of July\", \"joyful Fourth\")):\n",
+    "    print(\"True\")\n",
+    "    print (\"Congratulations! Both the word/phrase seems to be an Anagram as per this program logic.\")\n",
+    "else:\n",
+    "    print(\"False\")\n",
+    "    print(\"Sorry, it looks like your supplied word/phrase does not seem to be an Anagram as per this program logic.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "anagram_checker(\"Slient\", \"Night\")"
+    "anagram_checker(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"listen\") # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"the detectives\", \"detect thieves\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"vacation time\", \"I am not active\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"Night\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Russell Crowe\", \"scowler rules\")"
    ]
   },
   {
@@ -97,24 +273,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "Sorry, it looks like your supplied word/phrase does not seem to be an Anagram as per this program logic.\n"
+     ]
+    }
+   ],
    "source": [
-    "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "# Function to determine whether the 2 words or phrases are anagram or not based on case-sensitivity, and return True or False boolean value accordingly\n",
+    "def anagram_checker_case_sensitive(first_word, second_word, is_case_sensitive):\n",
+    "  \"\"\"Checks for Anagram based on case sensitivity and returns True or False\"\"\"\n",
     "\n",
-    "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Slient\", \"listen\", False) # True"
+    "  # Verifying whether valid string has been entered or not\n",
+    "  # print (is_valid_string(first_word))\n",
+    "  # print (is_valid_string(second_word))\n",
+    "  if not (is_valid_string(first_word) and is_valid_string(second_word)):\n",
+    "    # print(\"Not a valid string\")\n",
+    "    return False\n",
+    "  \n",
+    "  if (is_case_sensitive):\n",
+    "    # Removing spaces from the both inputted words\n",
+    "    nospace_first_word = first_word.replace(' ','')\n",
+    "    nospace_second_word = second_word.replace(' ','')\n",
+    "    # print(nospace_first_word, nospace_second_word)\n",
+    "    # check if both words/phrase are of same length or not\n",
+    "    if(len(nospace_first_word) == len(nospace_second_word)):\n",
+    "        # sort the strings\n",
+    "        sorted_first_word = sorted(nospace_first_word)\n",
+    "        sorted_second_word = sorted(nospace_second_word)\n",
+    "        # print(sorted_first_word, sorted_second_word)\n",
+    "        # if sorted strings are the same\n",
+    "        if(sorted_first_word == sorted_second_word):\n",
+    "            return True\n",
+    "            # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\"\n",
+    "            # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\")\n",
+    "        else:\n",
+    "            return False\n",
+    "            # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
+    "            # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
+    "    else:\n",
+    "        return False\n",
+    "        # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
+    "        # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
+    "  else:\n",
+    "        # converting both inputted words into lowercase and removing spaces\n",
+    "        lower_first_word = first_word.lower().replace(' ','')\n",
+    "        lower_second_word = second_word.lower().replace(' ','')\n",
+    "        # print(lower_first_word, lower_second_word)\n",
+    "        # check if both words/phrase are of same length or not\n",
+    "        if(len(lower_first_word) == len(lower_second_word)):\n",
+    "            # sort the strings\n",
+    "            sorted_first_word = sorted(lower_first_word)\n",
+    "            sorted_second_word = sorted(lower_second_word)\n",
+    "            # print(sorted_first_word, sorted_second_word)\n",
+    "            # if sorted strings are the same\n",
+    "            if(sorted_first_word == sorted_second_word):\n",
+    "                return True\n",
+    "                # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\"\n",
+    "                # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\")\n",
+    "            else:\n",
+    "                return False\n",
+    "                # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
+    "                # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
+    "        else:\n",
+    "            return False\n",
+    "            # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
+    "            # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
+    "\n",
+    "# Function to verify whether valid string has been entered or not\n",
+    "def is_valid_string(input_word):\n",
+    "    \"\"\"Checks valid string\"\"\"\n",
+    "    no_space_string = input_word.replace(' ','')\n",
+    "    if input_word.isalpha() or no_space_string.isalpha():\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Check whether Anagram or not, and output the result to the user\n",
+    "if (anagram_checker_case_sensitive(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\", True)):\n",
+    "    print(\"True\")\n",
+    "    print (\"Congratulations! Both the word/phrase seems to be an Anagram as per this program logic.\")\n",
+    "else:\n",
+    "    print(\"False\")\n",
+    "    print(\"Sorry, it looks like your supplied word/phrase does not seem to be an Anagram as per this program logic.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "anagram_checker(\"Slient\", \"Listen\", True) # False"
+    "anagram_checker_case_sensitive(\"Silent\", \"Listen\", True) # False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker_case_sensitive(\"Silent\", \"listen\", False) # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker_case_sensitive(\"Elvis Presley\", \"Presley lives\", True) # False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker_case_sensitive(\"Emily Dickinson\", \"income is kindly\", False) # True"
    ]
   },
   {
@@ -144,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
