Updating Python Assignment-1 by removing commented code

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -56,15 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "Congratulations! Both the word/phrase seems to be an Anagram as per this program logic.\n"
+      "True\n"
      ]
     }
    ],
@@ -73,36 +72,27 @@
     "def anagram_checker(first_word, second_word):\n",
     "  \"\"\"Checks for Anagram and returns True or False\"\"\"\n",
     "\n",
-    "  # Verifying whether valid string has been entered or not\n",
-    "  # print (is_valid_string(first_word))\n",
-    "  # print (is_valid_string(second_word))\n",
+    "  # verifying whether valid string has been entered or not\n",
     "  if not (is_valid_string(first_word) and is_valid_string(second_word)):\n",
-    "    # print(\"Not a valid string\")\n",
     "    return False\n",
     "  \n",
     "  # converting both inputted words into lowercase and removing spaces\n",
     "  lower_first_word = first_word.lower().replace(' ','')\n",
     "  lower_second_word = second_word.lower().replace(' ','')\n",
-    "  # print(lower_first_word, lower_second_word)\n",
+    "\n",
     "  # check if both words/phrase are of same length or not\n",
     "  if(len(lower_first_word) == len(lower_second_word)):\n",
     "      # sort the strings\n",
     "      sorted_first_word = sorted(lower_first_word)\n",
     "      sorted_second_word = sorted(lower_second_word)\n",
-    "      # print(sorted_first_word, sorted_second_word)\n",
+    "\n",
     "      # if sorted strings are the same\n",
     "      if(sorted_first_word == sorted_second_word):\n",
     "          return True\n",
-    "          # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\"\n",
-    "          # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\")\n",
     "      else:\n",
     "          return False\n",
-    "          # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
-    "          # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
     "  else:\n",
     "      return False\n",
-    "      # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
-    "      # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
     "\n",
     "# Function to verify whether valid string has been entered or not\n",
     "def is_valid_string(input_word):\n",
@@ -114,17 +104,15 @@
     "        return False\n",
     "\n",
     "# Check whether Anagram or not, and output the result to the user\n",
-    "if (anagram_checker(\"Fourth of July\", \"joyful Fourth\")):\n",
+    "if (anagram_checker(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\")):\n",
     "    print(\"True\")\n",
-    "    print (\"Congratulations! Both the word/phrase seems to be an Anagram as per this program logic.\")\n",
     "else:\n",
-    "    print(\"False\")\n",
-    "    print(\"Sorry, it looks like your supplied word/phrase does not seem to be an Anagram as per this program logic.\")"
+    "    print(\"False\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -133,18 +121,18 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anagram_checker(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\")"
+    "anagram_checker(\"Fourth of July\", \"joyful Fourth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +141,7 @@
        "True"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +161,7 @@
        "True"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,15 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "Sorry, it looks like your supplied word/phrase does not seem to be an Anagram as per this program logic.\n"
+      "False\n"
      ]
     }
    ],
@@ -291,60 +278,45 @@
     "  \"\"\"Checks for Anagram based on case sensitivity and returns True or False\"\"\"\n",
     "\n",
     "  # Verifying whether valid string has been entered or not\n",
-    "  # print (is_valid_string(first_word))\n",
-    "  # print (is_valid_string(second_word))\n",
     "  if not (is_valid_string(first_word) and is_valid_string(second_word)):\n",
-    "    # print(\"Not a valid string\")\n",
     "    return False\n",
     "  \n",
     "  if (is_case_sensitive):\n",
     "    # Removing spaces from the both inputted words\n",
     "    nospace_first_word = first_word.replace(' ','')\n",
     "    nospace_second_word = second_word.replace(' ','')\n",
-    "    # print(nospace_first_word, nospace_second_word)\n",
+    "\n",
     "    # check if both words/phrase are of same length or not\n",
     "    if(len(nospace_first_word) == len(nospace_second_word)):\n",
     "        # sort the strings\n",
     "        sorted_first_word = sorted(nospace_first_word)\n",
     "        sorted_second_word = sorted(nospace_second_word)\n",
-    "        # print(sorted_first_word, sorted_second_word)\n",
+    "\n",
     "        # if sorted strings are the same\n",
     "        if(sorted_first_word == sorted_second_word):\n",
     "            return True\n",
-    "            # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\"\n",
-    "            # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\")\n",
     "        else:\n",
     "            return False\n",
-    "            # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
-    "            # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
     "    else:\n",
     "        return False\n",
-    "        # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
-    "        # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
     "  else:\n",
     "        # converting both inputted words into lowercase and removing spaces\n",
     "        lower_first_word = first_word.lower().replace(' ','')\n",
     "        lower_second_word = second_word.lower().replace(' ','')\n",
-    "        # print(lower_first_word, lower_second_word)\n",
+    "\n",
     "        # check if both words/phrase are of same length or not\n",
     "        if(len(lower_first_word) == len(lower_second_word)):\n",
     "            # sort the strings\n",
     "            sorted_first_word = sorted(lower_first_word)\n",
     "            sorted_second_word = sorted(lower_second_word)\n",
-    "            # print(sorted_first_word, sorted_second_word)\n",
+    "\n",
     "            # if sorted strings are the same\n",
     "            if(sorted_first_word == sorted_second_word):\n",
     "                return True\n",
-    "                # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\"\n",
-    "                # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are anagram.\")\n",
     "            else:\n",
     "                return False\n",
-    "                # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
-    "                # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
     "        else:\n",
     "            return False\n",
-    "            # return \"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\"\n",
-    "            # print(\"Strings \\\"\" + first_word + \"\\\" and \\\"\" + second_word + \"\\\" are NOT anagram.\")\n",
     "\n",
     "# Function to verify whether valid string has been entered or not\n",
     "def is_valid_string(input_word):\n",
@@ -358,15 +330,13 @@
     "# Check whether Anagram or not, and output the result to the user\n",
     "if (anagram_checker_case_sensitive(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\", True)):\n",
     "    print(\"True\")\n",
-    "    print (\"Congratulations! Both the word/phrase seems to be an Anagram as per this program logic.\")\n",
     "else:\n",
-    "    print(\"False\")\n",
-    "    print(\"Sorry, it looks like your supplied word/phrase does not seem to be an Anagram as per this program logic.\")"
+    "    print(\"False\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +345,7 @@
        "False"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +365,7 @@
        "True"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
