Removing function to validate string as per Emma's comment

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -48,33 +48,32 @@
     "\n",
     "Example outputs:\n",
     "```python\n",
-    "anagram_checker(\"Slient\", \"listen\") # True\n",
-    "anagram_checker(\"Slient\", \"Night\") # False\n",
+    "anagram_checker(\"Silent\", \"listen\") # True\n",
+    "anagram_checker(\"Silent\", \"Night\") # False\n",
     "anagram_checker(\"night\", \"Thing\") # True\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function to determine whether the 2 words or phrases are anagram or not, and return True or False boolean value accordingly\n",
     "def anagram_checker(first_word, second_word):\n",
     "  \"\"\"Checks for Anagram and returns True or False\"\"\"\n",
-    "\n",
-    "  # verifying whether valid string has been entered or not\n",
-    "  if not (is_valid_string(first_word) and is_valid_string(second_word)):\n",
-    "    return False\n",
     "  \n",
     "  # converting both inputted words into lowercase and removing spaces\n",
     "  lower_first_word = first_word.lower().replace(' ','')\n",
@@ -94,105 +93,13 @@
     "  else:\n",
     "      return False\n",
     "\n",
-    "# Function to verify whether valid string has been entered or not\n",
-    "def is_valid_string(input_word):\n",
-    "    \"\"\"Checks valid string\"\"\"\n",
-    "    no_space_string = input_word.replace(' ','')\n",
-    "    if input_word.isalpha() or no_space_string.isalpha():\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "\n",
-    "# Check whether Anagram or not, and output the result to the user\n",
-    "if (anagram_checker(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\")):\n",
-    "    print(\"True\")\n",
-    "else:\n",
-    "    print(\"False\")"
+    "# Run your code to check using the words below:\n",
+    "anagram_checker(\"Silent\", \"listen\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker(\"Fourth of July\", \"joyful Fourth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker(\"Silent\", \"listen\") # True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker(\"the detectives\", \"detect thieves\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker(\"vacation time\", \"I am not active\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +108,7 @@
        "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -221,33 +128,13 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker(\"Russell Crowe\", \"scowler rules\")"
    ]
   },
   {
@@ -261,25 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function to determine whether the 2 words or phrases are anagram or not based on case-sensitivity, and return True or False boolean value accordingly\n",
     "def anagram_checker_case_sensitive(first_word, second_word, is_case_sensitive):\n",
     "  \"\"\"Checks for Anagram based on case sensitivity and returns True or False\"\"\"\n",
-    "\n",
-    "  # Verifying whether valid string has been entered or not\n",
-    "  if not (is_valid_string(first_word) and is_valid_string(second_word)):\n",
-    "    return False\n",
     "  \n",
     "  if (is_case_sensitive):\n",
     "    # Removing spaces from the both inputted words\n",
@@ -318,25 +204,13 @@
     "        else:\n",
     "            return False\n",
     "\n",
-    "# Function to verify whether valid string has been entered or not\n",
-    "def is_valid_string(input_word):\n",
-    "    \"\"\"Checks valid string\"\"\"\n",
-    "    no_space_string = input_word.replace(' ','')\n",
-    "    if input_word.isalpha() or no_space_string.isalpha():\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "\n",
     "# Check whether Anagram or not, and output the result to the user\n",
-    "if (anagram_checker_case_sensitive(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\", True)):\n",
-    "    print(\"True\")\n",
-    "else:\n",
-    "    print(\"False\")"
+    "anagram_checker_case_sensitive(\"Silent\", \"listen\", False) # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -345,73 +219,13 @@
        "False"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "anagram_checker_case_sensitive(\"Silent\", \"Listen\", True) # False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker_case_sensitive(\"Silent\", \"listen\", False) # True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker_case_sensitive(\"Elvis Presley\", \"Presley lives\", True) # False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker_case_sensitive(\"Emily Dickinson\", \"income is kindly\", False) # True"
    ]
   },
   {
