--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -65,19 +65,19 @@
        "True"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Function to determine whether the 2 words or phrases are anagram or not, and return True or False boolean value accordingly\n",
-    "def anagram_checker(first_word, second_word):\n",
+    "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
+    "def anagram_checker(word_a, word_b):\n",
     "  \"\"\"Checks for Anagram and returns True or False\"\"\"\n",
     "  \n",
     "  # converting both inputted words into lowercase and removing spaces\n",
-    "  lower_first_word = first_word.lower().replace(' ','')\n",
-    "  lower_second_word = second_word.lower().replace(' ','')\n",
+    "  lower_first_word = word_a.lower().replace(' ','')\n",
+    "  lower_second_word = word_b.lower().replace(' ','')\n",
     "\n",
     "  # check if both words/phrase are of same length or not\n",
     "  if(len(lower_first_word) == len(lower_second_word)):\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "False"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -128,13 +128,33 @@
        "True"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\")"
    ]
   },
   {
@@ -148,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -157,20 +177,20 @@
        "True"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function to determine whether the 2 words or phrases are anagram or not based on case-sensitivity, and return True or False boolean value accordingly\n",
-    "def anagram_checker_case_sensitive(first_word, second_word, is_case_sensitive):\n",
+    "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  \"\"\"Checks for Anagram based on case sensitivity and returns True or False\"\"\"\n",
     "  \n",
     "  if (is_case_sensitive):\n",
     "    # Removing spaces from the both inputted words\n",
-    "    nospace_first_word = first_word.replace(' ','')\n",
-    "    nospace_second_word = second_word.replace(' ','')\n",
+    "    nospace_first_word = word_a.replace(' ','')\n",
+    "    nospace_second_word = word_b.replace(' ','')\n",
     "\n",
     "    # check if both words/phrase are of same length or not\n",
     "    if(len(nospace_first_word) == len(nospace_second_word)):\n",
@@ -187,8 +207,8 @@
     "        return False\n",
     "  else:\n",
     "        # converting both inputted words into lowercase and removing spaces\n",
-    "        lower_first_word = first_word.lower().replace(' ','')\n",
-    "        lower_second_word = second_word.lower().replace(' ','')\n",
+    "        lower_first_word = word_a.lower().replace(' ','')\n",
+    "        lower_second_word = word_b.lower().replace(' ','')\n",
     "\n",
     "        # check if both words/phrase are of same length or not\n",
     "        if(len(lower_first_word) == len(lower_second_word)):\n",
@@ -205,12 +225,12 @@
     "            return False\n",
     "\n",
     "# Check whether Anagram or not, and output the result to the user\n",
-    "anagram_checker_case_sensitive(\"Silent\", \"listen\", False) # True"
+    "anagram_checker(\"Silent\", \"listen\", False) # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -219,13 +239,33 @@
        "False"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anagram_checker_case_sensitive(\"Silent\", \"Listen\", True) # False"
+    "anagram_checker(\"Silent\", \"Listen\", True) # False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"I am Lord Voldemort\", \"Tom Marvolo Riddle\", True)"
    ]
   },
   {
