Removing redundant if-else condition

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {
         "id": "n0m48JsS-nMC"
       },
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {
         "id": "82-bk4CBB1w4"
       },
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 12,
       "metadata": {
         "id": "3TYo0-1SDLrd"
       },
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 25,
       "metadata": {
         "id": "_svDiRkdIwiT"
       },
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 26,
       "metadata": {
         "id": "LEYPM5v4JT0i"
       },
@@ -440,15 +440,12 @@
         "  #YOUR CODE HERE: use patient_summary() to get the means and check_zeros() to check for zeros in the means\n",
         "  # Average flare-ups\n",
         "  data_mean = patient_summary(file_path, 'mean')\n",
-        "  if(check_zeros(data_mean)):\n",
-        "    return True\n",
-        "  else:\n",
-        "    return False"
+        "  return check_zeros(data_mean)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -462,7 +459,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/sc/nfh2wgvx14s9px_npllyrb_w0000gn/T/ipykernel_88460/3611598504.py:9: DeprecationWarning: Calling nonzero on 0d arrays is deprecated, as it behaves surprisingly. Use `atleast_1d(cond).nonzero()` if the old behavior was intended. If the context of this warning is of the form `arr[nonzero(cond)]`, just use `arr[cond]`.\n",
+            "/var/folders/sc/nfh2wgvx14s9px_npllyrb_w0000gn/T/ipykernel_80662/3611598504.py:9: DeprecationWarning: Calling nonzero on 0d arrays is deprecated, as it behaves surprisingly. Use `atleast_1d(cond).nonzero()` if the old behavior was intended. If the context of this warning is of the form `arr[nonzero(cond)]`, just use `arr[cond]`.\n",
             "  flag = np.where(x == 0)[0]\n"
           ]
         }
